k8s/webapp-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-b
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "webapps-backendconfig"}'
spec:
  selector:
    app: webapp-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
